# json-stream-to-standard-types

./: README.md  json_stream_to_standard_types.py  pyproject.toml
.github/workflows/: test-build-release.yml
tests/: test_to_standard_types.py
