[tool.poetry]
name = "json-stream-to-standard-types"
version = "0.1.2"
description = "Convert json-stream objects to standard Python dicts and lists"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
packages = [
  { include = "json_stream_to_standard_types.py" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
json-stream = ">=1,<3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
